<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.startcall.StartCallFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_a_call_uppercase"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/create_username_color"
                app:hintTextColor="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/call_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username_to_call"
                    android:textColor="@color/white"

                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/start_call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/create_username_color"
                android:text="@string/start_call" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>